# UPL

./: .gitignore
hw01/: dune  hw1.ml  hw1_test.ml
hw02/: dune  hw2.ml  hw2_test.ml
hw03/: hw3.ml  hw3_test.ml
hw04/: dune  hw4.ml  hw4_test.ml
hw05/: dune  hw5.ml  hw5_test.ml
hw06/: dune  hw6.ml  hw6_test.ml
hw07/: dune  hw7.ml  hw7_test.ml  store.ml
hw07/parser/: .ast.ml.swp
hw09/: dune  fstore.ml  hw9.ml  hw9_test.ml  store.ml
hw10/: dune  dune-project  hw10.ml  hw10_test.ml
hw11/: dune  hw11.ml  hw11_test.ml  store.ml
hw12/: dune  hw12.ml  hw12_test.ml  store.ml
